Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/self_initializer/T8053906/SelfInitializerInLambdaTestc.out
SelfInitializerInLambdaTestc.java:14:36: compiler.err.illegal.self.ref
SelfInitializerInLambdaTestc.java:21:49: compiler.err.illegal.self.ref
2 errors
